# w2l

./: README.md  pyproject.toml  requirements.txt  setup.py
src/face_detection/detection/sfd/: sfd_detector.py
src/w2l/: inference.py
src/w2l/face_detection/: api.py
src/w2l/face_detection/detection/sfd/: sfd_detector.py
w2l/: inference.py  main.py
w2l.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
