[tool.poetry]
name = "w2l"
version = "0.1"
description = "wav2lip"
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
librosa = "^0.10.1"
opencv-contrib-python = "^4.8.0.76"
numpy = "^1.24.4"
opencv-python = "^4.8.0.76"
torch = "^2.0.1"
torchvision = "^0.15.2"
tqdm = "^4.66.1"
numba = "^0.57.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
 
[project.urls]
Homepage = "https://github.com/zain5266/w2l"
 
[project.scripts]
inference = "inference:generate_video"

